[gd_scene load_steps=44 format=2]

[ext_resource path="res://scenes/components/player/menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/intro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/components/puzzles/PuzzlesMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/components/player/textures/player_down_1.png" type="Texture" id=4]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere5.png" type="Texture" id=5]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere5.png" type="Texture" id=6]
[ext_resource path="res://scenes/components/player/fuel/textures/player_fuel.png" type="Texture" id=7]
[ext_resource path="res://scenes/components/player/fuel/textures/player_engine.png" type="Texture" id=8]
[ext_resource path="res://assets/logo.png" type="Texture" id=9]
[ext_resource path="res://scenes/components/player/fuel/textures/flame2.png" type="Texture" id=10]
[ext_resource path="res://scenes/components/player/textures/player_down_0.png" type="Texture" id=11]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere2.png" type="Texture" id=12]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere3.png" type="Texture" id=13]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere4.png" type="Texture" id=14]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere1.png" type="Texture" id=15]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere2.png" type="Texture" id=16]
[ext_resource path="res://scenes/components/altar/textures/sphere/shield_sphere1.png" type="Texture" id=17]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere4.png" type="Texture" id=18]
[ext_resource path="res://scenes/components/altar/textures/sphere/ray_sphere3.png" type="Texture" id=19]
[ext_resource path="res://scenes/components/player/laser_shot/textures/ray/laser_shot5.png" type="Texture" id=20]
[ext_resource path="res://scenes/components/puzzles/Narration.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/components/player/menu/textures/volume2.png" type="Texture" id=22]
[ext_resource path="res://scenes/components/player/menu/textures/volume1.png" type="Texture" id=23]
[ext_resource path="res://scenes/components/hello_luna/audio/click.wav" type="AudioStream" id=24]
[ext_resource path="res://scenes/components/alien/audio/splitting.wav" type="AudioStream" id=25]
[ext_resource path="res://scenes/components/player/menu/audio/game_v2.ogg" type="AudioStream" id=26]
[ext_resource path="res://scenes/components/player/menu/audio/menu.ogg" type="AudioStream" id=27]
[ext_resource path="res://scenes/components/player/fuel/textures/flame1.png" type="Texture" id=28]
[ext_resource path="res://scenes/components/player/fuel/textures/flame3.png" type="Texture" id=29]

[sub_resource type="DynamicFont" id=34]
size = 38
outline_size = 4
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=31]
size = 40
outline_size = 2
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 4
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="Animation" id=29]
resource_name = "go"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 190, 440 ), Vector2( 200, 408 ), Vector2( 254, 170 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 7, 10 ),
"transitions": PoolRealArray( 0.5, 1, 1, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 7 ),
"transitions": PoolRealArray( 2, 0.5, 2 ),
"update": 0,
"values": [ Color( 0.313726, 0.313726, 0.313726, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 10 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 12 ) ],
"loop": true,
"name": "ray",
"speed": 3.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 16 ) ],
"loop": true,
"name": "shield",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=33]
size = 50
outline_size = 2
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 4
outline_color = Color( 0.196078, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=30]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Options:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Options:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "close"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Background1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.2 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Options:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Options:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.08, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.12, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Background1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Options:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Options:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.12, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.08, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.12, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="OptionsContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Background1" type="Polygon2D" parent="OptionsContainer"]
color = Color( 0, 0, 0, 0.392157 )
polygon = PoolVector2Array( 0, 0, 1920, 0, 1920, 1080, 0, 1080 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background2" type="Polygon2D" parent="OptionsContainer"]
color = Color( 0.133333, 0.0941176, 0.290196, 0.392157 )
polygon = PoolVector2Array( 0, 0, 1536, 0, 1536, 1080, 0, 1080 )
__meta__ = {
"_edit_lock_": true
}

[node name="PuzzlesTitle" type="Label" parent="OptionsContainer/Background2"]
margin_left = 832.0
margin_top = 104.0
margin_right = 1216.0
margin_bottom = 147.0
custom_colors/font_color = Color( 0.529412, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 34 )
text = "Находки"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PuzzlesMenu" parent="OptionsContainer/Background2" instance=ExtResource( 3 )]
position = Vector2( 640, 168 )
scale = Vector2( 2, 2 )

[node name="Narration" parent="OptionsContainer/Background2" instance=ExtResource( 21 )]
position = Vector2( 512, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CallFriends" type="Button" parent="OptionsContainer/Background2"]
margin_left = 528.0
margin_top = 991.0
margin_right = 905.953
margin_bottom = 1037.0
focus_mode = 0
custom_colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_fonts/font = SubResource( 31 )
enabled_focus_mode = 0
text = "позвать друзей"
flat = true
icon_align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ShareFriends" type="Button" parent="OptionsContainer/Background2"]
margin_left = 1016.0
margin_top = 991.0
margin_right = 1514.56
margin_bottom = 1037.0
focus_mode = 0
custom_colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_fonts/font = SubResource( 31 )
enabled_focus_mode = 0
text = "рассказать друзьям"
flat = true
icon_align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Background3" type="Polygon2D" parent="OptionsContainer"]
color = Color( 0, 0, 0, 0.784314 )
polygon = PoolVector2Array( 0, 0, 512, 0, 512, 1080, 0, 1080 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameNameContainer" type="Node2D" parent="OptionsContainer/Background3"]
__meta__ = {
"_edit_lock_": true
}

[node name="GameName1" type="Label" parent="OptionsContainer/Background3/GameNameContainer"]
visible = false
margin_top = 30.5
margin_right = 256.0
margin_bottom = 50.5
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_fonts/font = SubResource( 6 )
text = "Mystery of Moon"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="GameName2" type="Label" parent="OptionsContainer/Background3/GameNameContainer"]
visible = false
margin_top = 33.5
margin_right = 256.0
margin_bottom = 53.5
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_fonts/font = SubResource( 6 )
text = "Mystery of Moon"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" type="Sprite" parent="OptionsContainer/Background3/GameNameContainer"]
position = Vector2( 318, 119 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerContainer" type="AnimatedSprite" parent="OptionsContainer/Background3"]
position = Vector2( 233.603, 259.896 )
rotation = 0.10472
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 27 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="ToTheMoon" type="AnimationPlayer" parent="OptionsContainer/Background3/PlayerContainer"]
autoplay = "go"
anims/go = SubResource( 29 )

[node name="PlayerEngine" type="Sprite" parent="OptionsContainer/Background3/PlayerContainer"]
position = Vector2( 0.205139, 1.45175 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerFuel" type="Sprite" parent="OptionsContainer/Background3/PlayerContainer/PlayerEngine"]
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="OptionsContainer/Background3/PlayerContainer/PlayerEngine"]
position = Vector2( -0.84906, 54.5183 )
scale = Vector2( 0.6, 1 )
frames = SubResource( 32 )
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="ShieldSphere" type="AnimatedSprite" parent="OptionsContainer/Background3/PlayerContainer"]
visible = false
position = Vector2( -38, -9 )
rotation = -0.10472
scale = Vector2( 1.333, 1.333 )
frames = SubResource( 28 )
animation = "shield"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="AudiosPlayingContainer" type="Node2D" parent="OptionsContainer/Background3"]
modulate = Color( 0.345098, 0.345098, 0.345098, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudiosPlaying" type="Button" parent="OptionsContainer/Background3/AudiosPlayingContainer"]
margin_left = 224.0
margin_top = 885.0
margin_right = 256.0
margin_bottom = 922.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="VolumeBase" type="Sprite" parent="OptionsContainer/Background3/AudiosPlayingContainer/AudiosPlaying"]
position = Vector2( 20, 19 )
texture = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[node name="VolumeOn" type="Sprite" parent="OptionsContainer/Background3/AudiosPlayingContainer/AudiosPlaying"]
position = Vector2( 20, 19 )
texture = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="PixSynt" type="Node2D" parent="OptionsContainer/Background3"]
modulate = Color( 0.313726, 0.313726, 0.313726, 1 )
position = Vector2( 185, 1064 )
scale = Vector2( 0.6, 0.6 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Version" type="Label" parent="OptionsContainer/Background3/PixSynt"]
margin_left = -301.667
margin_top = -10.0
margin_right = -228.667
margin_bottom = 14.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_fonts/font = SubResource( 6 )
text = "v1.0.0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SupportPixSynt" type="Label" parent="OptionsContainer/Background3/PixSynt"]
margin_left = -101.333
margin_top = -10.0
margin_right = 191.667
margin_bottom = 14.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_fonts/font = SubResource( 6 )
text = "support@pixsynt.ru"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="Node2D" parent="OptionsContainer"]
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Node2D" parent="OptionsContainer/Options"]
__meta__ = {
"_edit_lock_": true
}

[node name="LaserShot_0" type="Sprite" parent="OptionsContainer/Options/Continue"]
visible = false
position = Vector2( 256, 476 )
scale = Vector2( 8, 8.375 )
texture = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="OptionsContainer/Options/Continue"]
margin_left = 40.0
margin_top = 512.0
margin_right = 472.0
margin_bottom = 569.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 33 )
enabled_focus_mode = 0
text = "Продолжить"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Restart" type="Node2D" parent="OptionsContainer/Options"]
position = Vector2( 0, 1.90735e-06 )
__meta__ = {
"_edit_lock_": true
}

[node name="LaserShot_1" type="Sprite" parent="OptionsContainer/Options/Restart"]
visible = false
position = Vector2( 256, 608 )
scale = Vector2( 8, 7.25 )
texture = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Restart" type="Button" parent="OptionsContainer/Options/Restart"]
margin_left = 64.0
margin_top = 640.0
margin_right = 448.0
margin_bottom = 686.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Переиграть"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="Node2D" parent="OptionsContainer/Options"]
visible = false
position = Vector2( 0, 1.90735e-06 )
scale = Vector2( 0.6, 0.6 )
__meta__ = {
"_edit_lock_": true
}

[node name="LaserShot_2" type="Sprite" parent="OptionsContainer/Options/Exit"]
visible = false
position = Vector2( 426.667, 1261.66 )
scale = Vector2( 13.333, 5 )
texture = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="Button" parent="OptionsContainer/Options/Exit"]
visible = false
margin_left = 347.0
margin_top = 1280.0
margin_right = 507.0
margin_bottom = 1319.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Выход"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Reset" type="Node2D" parent="OptionsContainer/Options"]
visible = false
position = Vector2( 0, 1.90735e-06 )
scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Reset" type="Button" parent="OptionsContainer/Options/Reset"]
margin_left = 320.0
margin_top = 2478.0
margin_right = 747.0
margin_bottom = 2522.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.678431, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
text = "Удалить сохранения"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Tips" type="Label" parent="OptionsContainer/Options/Reset"]
visible = false
margin_left = 480.0
margin_top = 2530.0
margin_right = 800.0
margin_bottom = 2570.0
custom_colors/font_color = Color( 0.682353, 0.682353, 0.682353, 1 )
custom_fonts/font = SubResource( 30 )
text = "Закроет игру"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="HoverClick" type="AudioStreamPlayer" parent="OptionsContainer/Options"]
stream = ExtResource( 24 )
volume_db = -5.0
bus = "Effects"

[node name="Toggler" type="AnimationPlayer" parent="OptionsContainer"]
anims/RESET = SubResource( 5 )
anims/close = SubResource( 3 )
anims/show = SubResource( 4 )

[node name="MenuSwitcher" type="AudioStreamPlayer" parent="OptionsContainer"]
stream = ExtResource( 25 )
volume_db = -25.0
pitch_scale = 0.15
bus = "Effects"

[node name="Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -15.0
pitch_scale = 0.7
bus = "Ambient"

[node name="Game" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -15.0
pitch_scale = 0.7
bus = "Ambient"

[connection signal="button_down" from="OptionsContainer/Background2/CallFriends" to="." method="_on_CallFriends_button_down"]
[connection signal="button_down" from="OptionsContainer/Background2/ShareFriends" to="." method="_on_ShareFriends_button_down"]
[connection signal="mouse_entered" from="OptionsContainer/Background3/AudiosPlayingContainer/AudiosPlaying" to="." method="_on_AudiosPlaying_mouse_entered"]
[connection signal="mouse_exited" from="OptionsContainer/Background3/AudiosPlayingContainer/AudiosPlaying" to="." method="_on_AudiosPlaying_mouse_exited"]
[connection signal="pressed" from="OptionsContainer/Background3/AudiosPlayingContainer/AudiosPlaying" to="." method="on_AudiosPlaying_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/Options/Continue/Continue" to="." method="_on_option_mouse_entered" binds= [ 0 ]]
[connection signal="mouse_exited" from="OptionsContainer/Options/Continue/Continue" to="." method="_on_option_mouse_exited" binds= [ 0 ]]
[connection signal="pressed" from="OptionsContainer/Options/Continue/Continue" to="." method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/Options/Restart/Restart" to="." method="_on_option_mouse_entered" binds= [ 1 ]]
[connection signal="mouse_exited" from="OptionsContainer/Options/Restart/Restart" to="." method="_on_option_mouse_exited" binds= [ 1 ]]
[connection signal="pressed" from="OptionsContainer/Options/Restart/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/Options/Exit/Exit" to="." method="_on_option_mouse_entered" binds= [ 2 ]]
[connection signal="mouse_exited" from="OptionsContainer/Options/Exit/Exit" to="." method="_on_option_mouse_exited" binds= [ 2 ]]
[connection signal="pressed" from="OptionsContainer/Options/Exit/Exit" to="." method="_on_Exit_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/Options/Reset/Reset" to="." method="_on_Reset_mouse_entered"]
[connection signal="mouse_exited" from="OptionsContainer/Options/Reset/Reset" to="." method="_on_Reset_mouse_exited"]
[connection signal="pressed" from="OptionsContainer/Options/Reset/Reset" to="." method="_on_Reset_pressed"]
[connection signal="animation_finished" from="OptionsContainer/Toggler" to="." method="_on_Toggler_animation_finished"]
